--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.css" />
 
 
+    <!-- google font  -->
+
+    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
+
 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -29,10 +33,11 @@
             <input type="text" id="UserInput" placeholder="Search..." maxlength="25"><br>
             <button type="submit" id="submitBtn"> Search </button><br><br>
         </div>
+        <div id="OutPutContainer">
 
-        <div id="ImgsContainer">
+
+
         </div>
-
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
