--- a/index.html
+++ b/index.html
@@ -18,28 +18,42 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
 
+    <!-- google icons  -->
+
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="text-bg-dark">
 
-
-    <div class="container ">
-
-        <div id="UserContainer">
-            <h3 id="Clock"> Well Come To My Small World </h3>
-            <h1 id="title"> Any Imges & Videos Is Here </h1>
-            <input type="text" id="UserInput" placeholder="Search..." maxlength="25"><br>
-            <button type="submit" id="submitBtn"> Search </button><br><br>
+    <nav class="navbar bg-light ">
+        <div class="container-fluid">
+            <a class="navbar-brand"><i class="bi bi-amd"> <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36"
+                        fill="currentColor" class="bi bi-amd" viewBox="0 0 16 16">
+                        <path
+                            d="m.334 0 4.358 4.359h7.15v7.15l4.358 4.358V0zM.2 9.72l4.487-4.488v6.281h6.28L6.48 16H.2z" />
+                    </svg></i></a>
+            <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" id="UserInput" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit" id="submitBtn"><span
+                        class="material-symbols-outlined">
+                        search
+                    </span></button>
+            </form>
         </div>
-        <div id="OutPutContainer">
+    </nav>
 
 
+    <main>
 
+        <div class="container">
+            <div id="OutPutContainer" id="UserContainer">
+
+            </div>
         </div>
-    </div>
-
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
