--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IMGES</title>
+    <link rel="icon" type="image/x-icon" href="color.svg">
+    <title>A1</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
@@ -12,7 +14,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.css" />
-
+    <link rel="icon" type="image/x-icon" href="landscape.jpg">
 
     <!-- google font  -->
 
@@ -30,11 +32,19 @@
 
     <nav class="navbar bg-light ">
         <div class="container-fluid">
-            <a class="navbar-brand"><i class="bi bi-amd"> <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36"
-                        fill="currentColor" class="bi bi-amd" viewBox="0 0 16 16">
+            <a class="navbar-brand">
+                <i class="bi bi-amd">
+                    A1
+
+                    <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-amd"
+                        viewBox="0 0 16 16">
                         <path
                             d="m.334 0 4.358 4.359h7.15v7.15l4.358 4.358V0zM.2 9.72l4.487-4.488v6.281h6.28L6.48 16H.2z" />
-                    </svg></i></a>
+                    </svg>
+
+                </i>
+            </a>
+
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" id="UserInput" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit" id="submitBtn"><span
@@ -49,7 +59,10 @@
     <main>
 
         <div class="container">
-            <div id="OutPutContainer" id="UserContainer">
+            <center id="title">
+                <h1> Search Any Word For Get Imges </h1>
+            </center>
+            <div id="OutPutContainer">
 
             </div>
         </div>
