--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
 
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" id="UserInput" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit" id="submitBtn"><span
-                        class="material-symbols-outlined">
+                <button class="btn btn-success" type="submit" id="submitBtn"><span class="material-symbols-outlined">
                         search
                     </span></button>
             </form>
@@ -63,6 +62,7 @@
         <div class="container">
             <center id="title">
                 <h1> Search Any Word For Get Imges </h1>
+                <button onclick="clearAll()" id="clearbtn"> clearAll </button>
             </center>
             <div id="OutPutContainer">
 
